Fixes text, heading and social spacing

--- a/app/_scss/pages/_base.scss
+++ b/app/_scss/pages/_base.scss
@@ -3,10 +3,10 @@
 		width: 63%;
 		background-color: rgba(239, 64, 47, 0.08);
 		font-weight: 300;
-		padding: 6% 8%;
+		padding: 4% 8% 6% 8%;
 
 		h1 {
-			margin-bottom: 1em;
+			margin: 0.8em 0 0.5em 0;
 			font-weight: normal;
 		}
 
