--- a/app/_scss/sitewide/_base.scss
+++ b/app/_scss/sitewide/_base.scss
@@ -28,7 +28,7 @@ p {
 	font-size: $largest_font;
 	letter-spacing: $large_spacing;
 	line-height: $small_lineheight;
-	padding: 0 0 1.8em 0;
+	padding: 0.9em 0;
 }
 
 h1 {
